# liblekhika

./: .gitignore  CMakeLists.txt  README.md  validation_test.txt
.github/workflows/: build-and-test.yml
cli/: CMakeLists.txt  lekhika_cli.cpp
cmake/: cmake_uninstall.cmake.in
core/: CMakeLists.txt  version.txt
core/cmake/: lekhika-core-config.cmake.in  liblekhika-config.cmake.in
core/data/: autocorrect.toml  mapping.toml
core/include/lekhika/: lekhika_core.h
core/include/liblekhika/: lekhika_core.h
core/src/: lekhika_core.cpp
